--- a/main.html
+++ b/main.html
@@ -8,8 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <script type="text/javascript" src="./script.js"></script>
+	<table>
+		<thead>
+			<tr>
+				<th>roll number</th>
+				<th>name</th>
+		    </tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>A</td>
+			</tr>
+			<tr>
+				<td>2</td>
+				<td>B</td>
+			</tr>
+		</tbody>
+	</table>
 
 </body>
 
